--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Groupomania"
-    />
+    <meta name="description" content="Groupomania" />
 
-    <title>React App</title>
+    <title>Groupomania Network</title>
   </head>
   <body>
-    
     <div id="root"></div>
-
   </body>
-
 </html>
